logs/dag_id=Fail_Dags_Monitor/run_id=manual__2024-07-05T08:18:45.478464+00:00/task_id=load/attempt=25.log
[2024-07-05T08:51:46.388+0000] {local_task_job_runner.py:120} INFO - ::group::Pre task execution logs
[2024-07-05T08:51:46.407+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: Fail_Dags_Monitor.load manual__2024-07-05T08:18:45.478464+00:00 [queued]>
[2024-07-05T08:51:46.412+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: Fail_Dags_Monitor.load manual__2024-07-05T08:18:45.478464+00:00 [queued]>
[2024-07-05T08:51:46.412+0000] {taskinstance.py:2306} INFO - Starting attempt 25 of 27
[2024-07-05T08:51:46.419+0000] {taskinstance.py:2330} INFO - Executing <Task(PythonOperator): load> on 2024-07-05 08:18:45.478464+00:00
[2024-07-05T08:51:46.427+0000] {logging_mixin.py:188} WARNING - /home/***/.local/lib/python3.12/site-packages/***/task/task_runner/standard_task_runner.py:61 DeprecationWarning: This process (pid=48821) is multi-threaded, use of fork() may lead to deadlocks in the child.
[2024-07-05T08:51:46.425+0000] {standard_task_runner.py:90} INFO - Running: ['***', 'tasks', 'run', 'Fail_Dags_Monitor', 'load', 'manual__2024-07-05T08:18:45.478464+00:00', '--job-id', '526', '--raw', '--subdir', 'DAGS_FOLDER/fail_dags_monitor.py', '--cfg-path', '/tmp/tmp2koyuiuj']
[2024-07-05T08:51:46.428+0000] {standard_task_runner.py:63} INFO - Started process 48823 to run task
[2024-07-05T08:51:46.428+0000] {standard_task_runner.py:91} INFO - Job 526: Subtask load
[2024-07-05T08:51:46.464+0000] {task_command.py:426} INFO - Running <TaskInstance: Fail_Dags_Monitor.load manual__2024-07-05T08:18:45.478464+00:00 [running]> on host 0b64c9d791b9
[2024-07-05T08:51:46.515+0000] {taskinstance.py:2648} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='congminh.nguyen@onpoint.vn' AIRFLOW_CTX_DAG_ID='Fail_Dags_Monitor' AIRFLOW_CTX_TASK_ID='load' AIRFLOW_CTX_EXECUTION_DATE='2024-07-05T08:18:45.478464+00:00' AIRFLOW_CTX_TRY_NUMBER='25' AIRFLOW_CTX_DAG_RUN_ID='manual__2024-07-05T08:18:45.478464+00:00'
[2024-07-05T08:51:46.516+0000] {taskinstance.py:430} INFO - ::endgroup::
[2024-07-05T08:51:46.749+0000] {dagbag.py:545} INFO - Filling up the DagBag from /opt/***/dags
[2024-07-05T08:51:47.400+0000] {logging_mixin.py:188} INFO - Successfully connect to database!
[2024-07-05T08:51:47.580+0000] {taskinstance.py:441} INFO - ::group::Post task execution logs
[2024-07-05T08:51:47.582+0000] {taskinstance.py:2905} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 465, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 432, in _execute_callable
    return execute_callable(context=context, **execute_callable_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/baseoperator.py", line 401, in wrapper
    return func(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/operators/python.py", line 235, in execute
    return_value = self.execute_callable()
                   ^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/operators/python.py", line 252, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/opt/airflow/dags/fail_dags_monitor.py", line 80, in load
    c.copy_expert(
psycopg2.errors.SyntaxError: syntax error at or near ")"
LINE 13:                     ) FROM STDIN WITH CSV
                             ^

[2024-07-05T08:51:47.597+0000] {taskinstance.py:1206} INFO - Marking task as UP_FOR_RETRY. dag_id=Fail_Dags_Monitor, task_id=load, run_id=manual__2024-07-05T08:18:45.478464+00:00, execution_date=20240705T081845, start_date=20240705T085146, end_date=20240705T085147
[2024-07-05T08:51:47.611+0000] {standard_task_runner.py:110} ERROR - Failed to execute job 526 for task load (syntax error at or near ")"
LINE 13:                     ) FROM STDIN WITH CSV
                             ^
; 48823)
[2024-07-05T08:51:47.624+0000] {local_task_job_runner.py:240} INFO - Task exited with return code 1
[2024-07-05T08:51:47.640+0000] {taskinstance.py:3503} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2024-07-05T08:51:47.642+0000] {local_task_job_runner.py:222} INFO - ::endgroup::
